# Furniture_store

./: CMakeLists.txt  Client.cpp  Client.h  Employee.cpp  Employee.h  Functions.cpp  Functions.h  Furniture.cpp  Furniture.h  Order.cpp  Order.h  People.cpp  People.h  WrongChoice.h  WrongPassword.h  WrongType.h  main.cpp
List/: Client_list.txt  Employee_list.txt  Furniture_list.txt  Order_list.txt
